# vihorki_aviahack

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  frontend.py  init.sql  main.py  pg_hba.conf  pyproject.toml
.github/workflows/: code_checks.yml  python-app.yml
examples/: frontend_analyze_example.sh
tests/: test_base_func.py  test_ceph.py  test_db_init.py  test_main.py  test_redis.py
vihorki/: __init__.py  main.py
vihorki/analyze/: README.md  compare_metrics.py  data copy.ipynb  data.ipynb  download_data.py  metrics.py
vihorki/analyze/data/: hits.h5  joins_f.h5  visits_f.h5
vihorki/domain/: base.py
vihorki/domain/entities/: cached_message.py  hit.py  metric.py  visit.py
vihorki/domain/repositories/: metric_repo.py
vihorki/infrastructure/: settings.py
vihorki/infrastructure/ceph/: s3.py
vihorki/infrastructure/ceph/common/: filestorage.py
vihorki/infrastructure/kafka/: kafka.docker-compose.yml
vihorki/infrastructure/postgres/: postgres.docker-compose.yml  uow.py
vihorki/infrastructure/postgres/on_startup/: init_db.py  init_tables.py  load_csv_data.py  run_db.py
vihorki/infrastructure/postgres/repositories/: metric_repo.py
vihorki/infrastructure/redis/: .env-redis  redis.docker-compose.yml  redis_tools.py
vihorki/metrics_analyzer/: README.md  TESTING.md  __init__.py  config.py  example_usage.py  models.py  orchestrator.py
vihorki/metrics_analyzer/clients/: __init__.py  api.py  llm.py
vihorki/metrics_analyzer/constants/: __init__.py  prompts.py
vihorki/metrics_analyzer/tests/: test_clients.py  test_orchestrator.py
vihorki/metrics_analyzer/utils/: __init__.py  prompt_formatter.py
vihorki/services/: llm_response_formatter.py  metrics_aggregator.py
